--- a/src/Components/ImageCarousel/ImageCarousel.css
+++ b/src/Components/ImageCarousel/ImageCarousel.css
@@ -14,12 +14,13 @@
 }
 
 .img-slide img {
+  position: center;
   display:inline-block;
   width: 100px;
   height: 100px;
 }
 
 .swiper {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 10px;
+  margin-right: 10px;
 }
